namespace AuthService.Domain.Enums;

public enum Roles : short
{
    CUSTOMER = 1,
    SELLER = 2,
    ADMIN = 3,
    EDITOR = 4
}