namespace ProductService.Domain.Enums;

public enum ProductStatuses : short
{
    ACTIVE = 1,
    INACTIVE = 2,
    DRAFT = 3,
    BANNED = 4,
    OUT_OF_STOCK = 5
}