/// ========> Kullanıcı <========

Table users {
  id uuid [pk, default: `NEWID()`]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(255) [unique, not null, note: 'Giriş anahtarı']
  phone_number varchar(20) [unique]
  deleted_at datetime2 [note: 'Soft delete uygulanan kayıtların silinme anı']
  created_at datetime2 [default: `GETUTCDATE()`]
}

Table roles {
  id smallint [pk]
  name varchar(50) [not null, note: 'admin, customer, editor, warehouse_manager, seller']
}

// Junction table (Many-to-Many)
Table user_roles {
  user_id uuid [not null]
  role_id smallint [not null]
  
  Indexes {
    (user_id, role_id) [pk]
  }
}
Ref: users.id < user_roles.user_id [delete: cascade]
Ref: roles.id < user_roles.role_id [update: restrict, delete: restrict] 

Table user_credentials {
  user_id uuid [pk]
  password_hash text [not null]
  updated_at datetime2 [default: `GETUTCDATE()`]
}
Ref: users.id - user_credentials.user_id [delete: cascade]

Table user_refresh_tokens {
  id uuid [pk, default: `NEWID()`]
  user_id uuid [not null]
  token_hash text [not null]
  client_ip varchar(45)
  expires_at datetime2 [not null]
  is_revoked boolean [default: false, note: 'Güvenlik nedeniyle iptal edildi mi?']
  replaced_by uuid [note: 'Bu token yerine üretilen yeni token id']
  last_used_at datetime2 [default: `GETUTCDATE()`]
  created_at datetime2 [default: `GETUTCDATE()`]

  Indexes {
    token_hash [unique]
  }
}
Ref: users.id < user_refresh_tokens.user_id [delete: cascade]
Ref: user_refresh_tokens.id < user_refresh_tokens.replaced_by [delete: cascade]

Records users(id, first_name, last_name, email, phone_number, created_at) {
  1, 'Hamza', 'Bayar', 'hamza-deneme@gmail.com', null, null
  2, 'Hakan', 'Aslan', 'hakan-deneme@gmail.com', null, null
}

Records user_credentials(user_id, password_hash, updated_at) {
  1, 'hash1', null
  2, 'hash2', null
}

Records user_refresh_tokens(id, user_id, token_hash, expires_at, is_revoked, replaced_by, last_used_at, created_at) {
  101, 1, 'token1', '2026-05-08', false, null, null, null
  102, 2, 'token2', '2026-05-08', false, null, null, null
}

/// ========> Ürün <========

Table products {
  id uuid [pk, default: `NEWID()`]
  status_id smallint [not null]
  name varchar(255) [not null]
  description text
  stock int [not null]
  created_at datetime2 [default: `GETUTCDATE()`]
  updated_at datetime2
  deleted_at datetime2
}
Ref: product_statuses.id < products.status_id [update: restrict, delete: restrict]

Table product_statuses {
  id smallint [pk]
  name varchar(30) [unique, not null]
  description text
}

Records product_statuses(id, name, description) {
  1, 'ACTIVE', 'Product is available for sale'
  2, 'INACTIVE', 'Product is not available'
  3, 'DRAFT', 'Product is being edited'
  4, 'BANNED', 'Product is prohibited'
  5, 'OUT_OF_STOCK', 'Product is currently out of stock'
}

Records products(id, status_id, name, description, stock, created_at, updated_at, deleted_at) {
  1, 1, 'iPhone 15 Pro', '128GB Blue Titanium', 500, '2026-05-08', null, null
  2, 1, 'Galaxy S24 Ultra', 'Titanium Black 512GB', 33300, '2026-05-08', null, null
  3, 5, 'MacBook Air M2', '8GB RAM 256GB SSD', 23445, '2026-05-08', null, null
}

/// ========> Log <========

Table log {
  id uuid [pk, default: `NEWID()`]
  message text [not null]
  service_name int [not null]
  created_at datetime2 [default: `GETUTCDATE()`]
}

Records log(id, message, service_name, created_at) {
  1, 'register', 'auth_service', '2026-02-08'
  2, 'product cteated', 'product_service', '2026-05-08'
  3, 'product deleted', 'product_service', '2026-06-08'
}
